--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -2,4 +2,4 @@ set -g mouse on
 set -g base-index 1
 set -g pane-base-index 1
 set-option -g renumber-windows on
-set-option -g status-position top
+set -s default-terminal "screen-256color"
