--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -2,3 +2,11 @@ set -g mouse on
 set -g base-index 1
 set -g pane-base-index 1
 set-option -g renumber-windows on
+set -g @resurrect-strategy-nvim 'session'
+set -g @resurrect-capture-pane-contents 'on':
+# List of plugins
+set -g @plugin 'tmux-plugins/tpm'
+set -g @plugin 'tmux-plugins/tmux-sensible'
+set -g @plugin 'tmux-plugins/tmux-resurrect'
+# Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
+run '~/.config/tmux/plugins/tpm/tpm'
