--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -4,6 +4,8 @@ set -g pane-base-index 1
 set-option -g renumber-windows on
 set -g @resurrect-strategy-nvim 'session'
 set -g @resurrect-capture-pane-contents 'on':
+set-option -a terminal-overrides 'xterm-256color:Tc'
+set-option -a terminal-features 'xterm-256color:RGB'
 # List of plugins
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-sensible'
