--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -3,7 +3,7 @@ set -g base-index 1
 set -g pane-base-index 1
 set-option -g renumber-windows on
 set -g @resurrect-strategy-nvim 'session'
-set -g @resurrect-capture-pane-contents 'on':
+set -g @resurrect-capture-pane-contents 'on'
 set-option -a terminal-overrides 'xterm-256color:Tc'
 set-option -a terminal-features 'xterm-256color:RGB'
 # List of plugins
