--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -10,5 +10,18 @@ set-option -a terminal-features 'xterm-256color:RGB'
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-sensible'
 set -g @plugin 'tmux-plugins/tmux-resurrect'
+# splitting
+# Horizontal split with prefix + -
+bind - split-window -v
+bind-key -n M-L split-window -v
+# Vertical split with prefix + \\
+bind \\ split-window -h
+bind-key -n M-l split-window -h
+# set the split windows
+unbind '"'
+unbind %
+# source
+bind r source-file ~/.config/tmux/tmux.conf  \; display "Reloaded tmux config!"
+bind R source-file ~/.config/tmux/tmux.conf  \; display "Reloaded tmux config!"
 # Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
 run '~/.config/tmux/plugins/tpm/tpm'
