--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -10,6 +10,9 @@ set-option -a terminal-features 'xterm-256color:RGB'
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-sensible'
 set -g @plugin 'tmux-plugins/tmux-resurrect'
+# set prefix
+unbind C-b
+set -g prefix C-f
 # splitting
 # Horizontal split with prefix + -
 bind - split-window -v
@@ -27,8 +30,8 @@ bind R source-file ~/.config/tmux/tmux.conf  \; display "Reloaded tmux config!"
 set-window-option -g window-status-current-style bg=red
 set-option -g pane-active-border-style fg=red
 # switch windows using j and k
-bind-key -n M-j previous-window
-bind-key -n M-k next-window
+bind-key -n M-u previous-window
+bind-key -n M-i next-window
 # Smart pane switching with awareness of Vim splits.
 # See: https://github.com/christoomey/vim-tmux-navigator
 is_vim="ps -o state= -o comm= -t '#{pane_tty}' \
