--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -16,10 +16,10 @@ set -g prefix C-f
 # splitting
 # Horizontal split with prefix + -
 bind - split-window -v
-bind-key -n M-L split-window -v
+bind-key -n M-/ split-window -v
 # Vertical split with prefix + \\
 bind \\ split-window -h
-bind-key -n M-l split-window -h
+bind-key -n M-? split-window -h
 # set the split windows
 unbind '"'
 unbind %
